{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 6,
  "lineage": "09354f44-3b0c-1bfb-ec7b-9b75df7bffa4",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "xword-data-subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:subnet/subnet-09f6d784d6eda34de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "default_for_az": false,
            "id": "subnet-09f6d784d6eda34de",
            "map_public_ip_on_launch": false,
            "owner_id": "432883629663",
            "state": "available",
            "tags": {
              "Name": "xword-data-subnet-1"
            },
            "vpc_id": "vpc-07a4b791f8bdf28a9"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "xword-data-subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:subnet/subnet-05820e04c9ad1f336",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "id": "subnet-05820e04c9ad1f336",
            "map_public_ip_on_launch": false,
            "owner_id": "432883629663",
            "state": "available",
            "tags": {
              "Name": "xword-data-subnet-2"
            },
            "vpc_id": "vpc-07a4b791f8bdf28a9"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "xword-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:vpc/vpc-07a4b791f8bdf28a9",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-045df3f6d8a9c7be1",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-fabebc9c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07a4b791f8bdf28a9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b39d2c4e6c85b1b0",
            "owner_id": "432883629663",
            "state": "available",
            "tags": {
              "Name": "xword-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_access_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:security-group/sg-088d3fbe3ca251f83",
            "description": "Allow access to RDS",
            "egress": [],
            "id": "sg-088d3fbe3ca251f83",
            "ingress": [],
            "name": "production-db-access-sg",
            "name_prefix": null,
            "owner_id": "432883629663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "production-db-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4b791f8bdf28a9"
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:security-group/sg-08c3fd58b115070f4",
            "description": "production Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c3fd58b115070f4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-088d3fbe3ca251f83"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "production-rds-sg",
            "name_prefix": null,
            "owner_id": "432883629663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "production-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4b791f8bdf28a9"
          },
          "dependencies": [
            "module.rds.aws_security_group.db_access_sg"
          ]
        }
      ]
    }
  ]
}